JEAP-7610: Enhance version flow diagram rendering and update related tests